cabal-version:      2.4
name:               start-haskell
version:            0.1.0.0
synopsis:           my first cabal project example

-- A longer description of the package.
-- description:
homepage:           https://github.com/goushino/start-haskell

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             goushino
maintainer:         shinozaki54@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

common shared-properties
    build-depends:    base ^>=4.14.1.0
    default-language: Haskell2010
    ghc-options:      -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-import-lists -Wcompat

common test-depends
    build-depends:      hspec ^>=2.7.4
    build-tool-depends: hspec-discover:hspec-discover -any

library
    import:           shared-properties

    exposed-modules:  MyLib

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    hs-source-dirs:   src

executable start-haskell
    import:           shared-properties
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    start-haskell
    hs-source-dirs:   app

test-suite start-haskell-test
    import:           shared-properties, test-depends
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs

    other-modules:    MyLibSpec
    build-depends:    start-haskell
